phpMyFAQ 2.8.10
Codename "Perdita"

CHANGELOG

This is a log of major user-visible changes in each phpMyFAQ release.

Version 2.8.10 - 2014-05-
- updated Brazilian Portuguese translation (Joao Tafarelo)
- updated bundled TinyMCE to version 3.5.11 (Thorsten)
- updated bundled TCPDF library to version 6.0.078 (Thorsten)
- fixed some minor bugs (Thorsten)

Version 2.8.9 - 2014-04-28
- updated Thai translation
- fixed some minor bugs (Thorsten)

Version 2.8.8 - 2014-03-18
- improved API security (Thorsten)
- fixed search with Hebrew characters (Thorsten)
- fixed PDF export with Czech and Slovak characters (Thorsten)
- fixed a lot of bugs (Thorsten)

Version 2.8.7 - 2014-02-05
- fixed PHP 5.4 related issue introduced in 2.8.6 (Thorsten)

Version 2.8.6 - 2014-02-04
- fixed IE8/9 only XSS and CSRF vulnerabilities (JPCERT, Thorsten)
- updated Hungarian translation
- updated Spanish translation (Luis Carvalho)
- updated bundled Symfony ClassLoader to version 2.4.1 (Thorsten)
- fixed some minor bugs (Thorsten)

Version 2.8.5 - 2013-12-31
- fixed SSO logins with mod_auth_kerb (Stephane Lapie)
- improved HTTPS handling (Thorsten)
- updated Dutch translation
- updated European Portuguese translation
- fixed some minor bugs (Thorsten)

Version 2.8.4 - 2013-11-26
- fixed possible arbitrary PHP code execution (Thorsten)
- updated Chinese (Traditional) translation
- updated Dutch translation
- fixed some minor bugs (Thorsten)

Version 2.8.3 - 2013-11-18
- fixed missing permission check on Image Manager (Thorsten)
- improved HTML / CSS code (Michael Meister)
- updated Brazilian Portuguese translation
- updated Japanese translation
- updated Spanish translation
- updated Swedish translation
- fixed some minor bugs (Thorsten)

Version 2.8.2 - 2013-07-25
- added French Canada translation (Jacqueline Gazaille Tétreault)
- improved attachment upload dialog with HTML5 File API (Thorsten)
- updated Finnish translation (Pasi Pajukoski)
- fixed some minor bugs (Thorsten)
