@@ -321,7 +321,7 @@ pre {
 <li><a href="#2.8">Enabling support for SEO-friendly URLs</a></li>
 <li><a href="#2.9">Enabling LDAP support</a></li>
 <li><a href="#2.10">PDF export</a></li>
-<li><a href="#2.11">Mozilla Firefox, Google Chrome and IE8+ search plugins</a></li>
+<li><a href="#2.11">Mozilla Firefox, Google Chrome and IE9+ search plugins</a></li>
 <li><a href="#2.12">Static solution ID</a></li>
 <li><a href="#2.13">Spam protection</a></li>
 <li><a href="#2.14">Attachments</a></li>
@@ -501,7 +501,7 @@ pre {
 
 <p>In case you have PHP below 5.3.2 installed you cannot use phpMyFAQ.</p>
 
-<p>phpMyFAQ uses a modern HTML5/CSS3 powered markup. The supported browsers are Mozilla Firefox 3.6 and later (Windows/OS X/Linux), Safari 5.x or later (OS X/Windows/iOS), Chrome 5 or later (Windows/OS X/Linux), Opera 11.0 or later (Windows/OS X/Linux) and Internet Explorer 7 or later for Windows. You have to enable JavaScript for the Ajax based functions as well.</p>
+<p>phpMyFAQ uses a modern HTML5/CSS3 powered markup. The supported browsers are Mozilla Firefox 3.6 and later (Windows/OS X/Linux), Safari 5.x or later (OS X/Windows/iOS), Chrome 5 or later (Windows/OS X/Linux), Opera 11.0 or later (Windows/OS X/Linux) and Internet Explorer 9 or later for Windows. You have to enable JavaScript for the Ajax based functions as well.</p>
 
 <p>We recommend to use always the latest version of Firefox, Chrome, Safari, Opera and Internet Explorer.</p>
 
@@ -722,9 +722,9 @@ Please check, if <code>AllowOverride All</code>    is set correctly in your http
 
 <hr />
 
-<p><strong>2.11. <a id="2.11"></a>Mozilla Firefox, Google Chrome and IE8+ search plugins</strong></p>
+<p><strong>2.11. <a id="2.11"></a>Mozilla Firefox, Google Chrome and IE9+ search plugins</strong></p>
 
-<p>phpMyFAQ provides search plugins for Mozilla Firefox, Google Chrome and Internet Explorer 8+ based on the OpenSearch specification. Every user in the frontend can install it. With an installed search plugin you can search through the phpMyFAQ installation with the search box in upper right corner of Mozilla Firefox, Google Chrome or Internet Explorer.</p>
+<p>phpMyFAQ provides search plugins for Mozilla Firefox, Google Chrome and Internet Explorer 9+ based on the OpenSearch specification. Every user in the frontend can install it. With an installed search plugin you can search through the phpMyFAQ installation with the search box in upper right corner of Mozilla Firefox, Google Chrome or Internet Explorer.</p>
 
 <p><a href="#top">back to top</a></p>
 
